tests/compile_errors/027-early-return.buzz
| Code after return statement will never be reached
import "std";

test "Early return" {
    print("I sure hope i'm not interrupted...");

    return;

    print("Guess I was");
}